--- a/views/income_data.ejs
+++ b/views/income_data.ejs
@@ -8,7 +8,8 @@
     <h1>Income Data</h1>
     <hr />
     <form action="/admin/income_data" method="post">
-      <input type="text" name="header" placeholder="Enter header" />
+      <input type="text" name="minIncome" placeholder="Min. Income" />
+      <input type="text" name="maxIncome" placeholder="Max. Income" />
       <input type="text" name="score" placeholder="Enter score" />
       <button type="submit">Submit</button>
     </form>
