--- a/views/socio_economic_status_data.ejs
+++ b/views/socio_economic_status_data.ejs
@@ -8,7 +8,8 @@
     <h1>Socio Economic Status Data</h1>
     <hr />
     <form action="/admin/socio_economic_status_data" method="post">
-      <input type="text" name="score" placeholder="Enter score" />
+      <input type="text" name="minScore" placeholder="Min. score" />
+      <input type="text" name="maxScore" placeholder="Max. score" />
       <input type="text" name="Class" placeholder="Enter Class" />
       <button type="submit">Submit</button>
     </form>
