--- a/views/admin_dashboard.ejs
+++ b/views/admin_dashboard.ejs
@@ -18,6 +18,7 @@
           >Socio Economic Status Data</a
         >
       </li>
+      <li><a href="/admin/calorie_data">Calorie Data</a></li>
     </ul>
   </body>
 </html>
