--- a/views/socio_economic_status_data.ejs
+++ b/views/socio_economic_status_data.ejs
@@ -11,6 +11,7 @@
       <input type="text" name="minScore" placeholder="Min. score" />
       <input type="text" name="maxScore" placeholder="Max. score" />
       <input type="text" name="Class" placeholder="Enter Class" />
+      <input type="text" name="value" placeholder="Enter Value" />
       <button type="submit">Submit</button>
     </form>
   </body>
